# ECSolver

./: README.md  pyproject.toml
ecsolver/: basic.py  exp_parser.py  logic.py  rules.py  sheet_connector.py
src/: exp_parser.py  logic.py  rules.py  solver.py
test/: cell_tests.py  module_functions.py  test.py
