[project]

name = "ecsolver"
version = "0.1.0"
description = "Utilidad de solver para el proyecto de Excel"

authors = [
    { name = "Cristian Bonilla" },
    { name = "Michael Jimenez" },
    { name = "Angela Santos" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2.2",
    "numpy>=2.2.6",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
excel-solver-cli = "solver.solver:main"
